--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
+    "@tailwindcss/typography": "^0.5.19",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
